# fomantic-ui-rust

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: action.rs  leptos.rs  lib.rs  models.rs  modules.rs
src/leptos/: checkbox.rs  label.rs  table.rs  table_row.rs
src/modules/: modal.rs  toast.rs
