[package]
name = "fomantic-ui"
version = "0.1.0"
edition = "2021"
authors = ["Lewin Probst <info@emirror.de>"]
license = "MIT"
description = "Rust bindings for fomantic-ui, https://fomantic-ui.com"
homepage = "https://github.com/emirror-de/fomantic-ui"
documentation = "https://github.com/emirror-de/fomantic-ui"
repository = "https://github.com/emirror-de/fomantic-ui"
readme = "README.md"
categories = ["web-programming", "api-bindings"]
keywords = ["fomantic-ui", "css", "framework", "bindings"]

[features]
leptos = ["dep:leptos", "models"]
models = []

[dependencies]
anyhow = "1"
gloo = { version = "0.11", features = ["utils"] }
leptos = { version = "0.6.15", features = ["csr"], optional = true }
serde = { version = "1", features = ["derive"] }
wasm-bindgen = "0.2"
